plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ms'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
//    Swagger (SpringDoc) - 최신 안정 버전
//    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

//    PostgreSQL 드라이버
    implementation 'org.postgresql:postgresql:42.6.0'

//     Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'org.springframework:spring-oxm'
    implementation 'com.thoughtworks.xstream:xstream:1.4.20'
//     Spring Batch
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    testImplementation 'org.springframework.batch:spring-batch-test'

//     Apache Commons CSV
    implementation 'org.apache.commons:commons-csv:1.10.0'

    // H2 임시 데이터 베이스로 H2 사용
    runtimeOnly 'com.h2database:h2'
    // spring data JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // IO - validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Spring Web
    implementation 'org.springframework.boot:spring-boot-starter-web'


    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Dev Tools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.springframework.security:spring-boot-security-test'
}
